[package]
name = "rtsp-to-webrtc"
version = "0.2.4"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = "4.5"
futures = "0.3.31"
retina = "0.4.10"
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["sync", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
webrtc = "0.11"
parking_lot = "0.12"

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
